Fix: text Align

--- a/public/css/oslim.css
+++ b/public/css/oslim.css
@@ -9249,4 +9249,5 @@ ul.custom-list li::marker {
 }
 .d-flex.forms-buttons{
     gap: 10px;
+    text-align: center;
 }
